--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.3.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
-    "react-webcam": "^1.0.4"
+    "react-webcam": "^1.0.4",
+    "sharp": "^0.20.8"
   },
   "scripts": {
     "start": "react-scripts start",
