--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
-    "react-webcam": "^1.0.4",
-    "sharp": "^0.20.8"
+    "react-webcam": "^1.0.4"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
